# TTOptimizer

./: .gitignore  README.md  TTOptimizer.sln
TTOptimizer.Console/: TTOptimizer.Console.cpp  TTOptimizer.Console.vcxproj  TTOptimizer.Console.vcxproj.filters
TTOptimizer.Engine/: ChromosomeDecoder.h  ChromosomeFactory.h  ChromosomeMutator.cpp  ChromosomeMutator.h  ChromosomeOutputDecoder.h  ChromosomeValidator.cpp  ChromosomeValidator.h  FitnessEvaluator.cpp  FitnessEvaluator.h  LessonInstanceGenerator.h  OptimizationResult.h  README.md  RoomTimeSlotGenerator.h  ScheduleSlotGenerator.h  SimpleOptimizer.cpp  SimpleOptimizer.h  TTOptimizer.Engine.cpp  TTOptimizer.Engine.h  TTOptimizer.Engine.vcxproj  TTOptimizer.Engine.vcxproj.filters  Test.h  Test1.h  TimeTableDecoder.cpp  TimeTableDecoder.h  TimeTableModels.h  TimeTableViewBuilder.cpp  TimeTableViewBuilder.h  TimetableProblemJsonReader.cpp  Utils.h
TTOptimizer.Engine/TimetableGA/: CMakeLists.txt
TTOptimizer.Engine/TimetableGA/include/: ChromosomeFactory.h  Domain.h  FitnessEvaluator.h  Utils.h
TTOptimizer.Engine/TimetableGA/src/: FitnessEvaluator.cpp
TTOptimizer.Engine/include/: ChromosomeDecoder.h  Domain.h  Engine.h  OptimizationResultJsonWriter.h  SampleTimetableData.h  ScheduledLessonResultJsonWriter.h  TimetableProblemJsonReader.h
TTOptimizer.Engine/src/: ChromosomeFactory.cpp  Engine.cpp  Main.cpp  main.cpp  (+1 more)
TTOptimizer.Publish/: TTOptimizer.Web.deps.json  TTOptimizer.Web.staticwebassets.endpoints.json  appsettings.json  web.config
TTOptimizer.Web/: Program.cs  TTOptimizer.Web.csproj  appsettings.json
(+179 files in other folders)
